syntax = "proto3";

package lrmodel;

message LRModel {
    map<int32, double> weights = 1;
    string parser = 2;
    int32 feature_num = 3;
    double auPRC = 4;
    double auROC = 5;
}

message IRModel {
    repeated double boundaries = 1;
    repeated double predictions = 2;
    double mean_square_error = 3;
}

message Pack {
    LRModel lr = 1;
    IRModel ir = 2;
    int64 create_time = 3;
    map<int32, int32> adid = 4;
    map<int32, int32> adclass = 5;
    map<int32, int32> slotid = 6;
    map<int32, int32> city = 7;
}
